--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,15 @@ services:
     ports:
       - "8000:8000"
     command: python manage.py runserver 0.0.0.0:8000
+  db:
+    image: mysql:latest
+    restart: always
+    environment:
+      MYSQL_DATABASE: mydb
+      MYSQL_USER: root
+      MYSQL_PASSWORD: password
+      MYSQL_ALLOW_EMPTY_PASSWORD: ‘yes’
+    volumes:
+      — ./mysql:/var/lib/mysql
+    ports:
+      — 3306:3306
